모달창 완성 redux 화면 완성

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,8 @@
     "paths": {
       "@components/*": ["src/components/*"],
       "@models/*": ["src/models/*"],
-      "@pages/*": ["src/pages/*"]
+      "@pages/*": ["src/pages/*"],
+      "@mocks/*": ["src/mocks/*"]
     }
   },
   "include": ["src"],
