--- a/package.json
+++ b/package.json
@@ -11,15 +11,14 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.7",
     "classnames": "^2.3.2",
-    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-draggable": "^4.4.6",
     "react-redux": "^8.1.3",
     "redux": "^4.2.1",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.199",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@types/uuid": "^9.0.5",
