--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@reduxjs/toolkit": "^1.9.7",
     "classnames": "^2.3.2",
     "jotai": "^2.4.3",
+    "mobx": "^6.10.2",
+    "mobx-react": "^9.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.6",
